[package]
authors = ["RSS Blue", "Dovydas Joksas"]
categories = ["parsing"]
edition = "2021"
keywords = ["sitemap", "xml"]
license = "MIT OR Apache-2.0"
name = "auto_sitemap"
readme = "README.md"
repository = "https://github.com/rssblue/auto_sitemap"
version = "0.1.0"

[dependencies]
chrono = "0.4.26"
md5 = "0.7.0"
reqwest = "0.11.18"
spider = "1.34.4"
url = "2.4.0"
xml = "0.8.10"
yaserde = { version="0.8.0", features = ["yaserde_derive"] }
yaserde_derive = "0.8.0"

[dev-dependencies]
axum = "0.6.20"
more-asserts = "0.3.1"
pretty_assertions = "1.4.0"
tokio = "1.31.0"

[lib]
doctest = false
